@@ -14,6 +14,9 @@
 		<!-- <instrumentation-hibernate.version>4.0.1.Final</instrumentation-hibernate.version> 
 			<instrumentation-javassist.version>3.18.0-GA</instrumentation-javassist.version> -->
 		<cargo.plugin.version>1.4.6</cargo.plugin.version>
+        <integrationtest.serverport>8080</integrationtest.serverport>
+        <integrationtest.serverhost>localhost</integrationtest.serverhost>
+        <integrationtest.contextpath>muikku</integrationtest.contextpath>
 	</properties>
 
 	<artifactId>core-plugins</artifactId>
@@ -139,14 +142,69 @@
 							<downloadDir>${project.build.directory}/downloads</downloadDir>
 							<extractDir>${project.build.directory}/extracts</extractDir>
 						</zipUrlInstaller>
+                        <dependencies>
+                            <dependency>
+                             <groupId>mysql</groupId>
+                             <artifactId>mysql-connector-java</artifactId>
+                           </dependency>
+                            <dependency>
+                             <groupId>com.h2database</groupId>
+                             <artifactId>h2</artifactId>
+                           </dependency>
+                       </dependencies>
 					</container>
 					<configuration>
-						<type>runtime</type>
+						<type>standalone</type>
+                        <home>${project.build.directory}/jboss71x</home>
 						<properties>
-							<cargo.hostname>localhost</cargo.hostname>
-							<cargo.jboss.management-native.port>9990</cargo.jboss.management-native.port>
+                            <cargo.port>${integrationtest.serverport}</cargo.port>
+                            <cargo.hostname>${integrationtest.serverhost}</cargo.hostname>
+							<cargo.jboss.management-native.port>19999</cargo.jboss.management-native.port>
+                            <cargo.jvmargs>
+                                -Declipse.workspace=../../../
+                                -Xms64m
+                                -Xmx4096m
+                                -XX:MaxPermSize=8192m
+                            </cargo.jvmargs>
+                            <cargo.runtime.args>
+                                -Dmuikku-plugin-libraries=../../../muikku-data/muikku-plugin-libraries.properties
+                                -Dmuikku-plugin-repositories=../../../muikku-data/muikku-plugin-repositories.properties
+                                -Dmuikku-data=../../../muikku-data/muikku-data.xml
+                                -Dcom.arjuna.ats.arjuna.allowMultipleLastResources=true
+                                -Dintegrationtest.serverhost=${integrationtest.serverhost}
+                                -Dintegrationtest.serverport=${integrationtest.serverport}
+                                -Dintegrationtest.contextpath=${integrationtest.contextpath}
+                            </cargo.runtime.args>
+                            <cargo.datasource.datasource.muikku>
+                                cargo.datasource.driver=com.mysql.jdbc.Driver|
+                                cargo.datasource.url=jdbc:mysql://localhost:3306/muikku|
+                                cargo.datasource.jndi=jdbc/muikku|
+                                cargo.datasource.username=muikku|
+                                cargo.datasource.password=muikku|
+                                cargo.datasource.transactionsupport=LOCAL_TRANSACTION
+                            </cargo.datasource.datasource.muikku>
+                            <cargo.datasource.datasource.muikku-h2>
+                                cargo.datasource.driver=org.h2.Driver|
+                                cargo.datasource.url=jdbc:h2:mem:;DB_CLOSE_DELAY=-1|
+                                cargo.datasource.jndi=jdbc/muikku-h2|
+                                cargo.datasource.username=sa|
+                                cargo.datasource.password=sa|
+                                cargo.datasource.transactionsupport=LOCAL_TRANSACTION
+                            </cargo.datasource.datasource.muikku-h2>
 						</properties>
 					</configuration>
+                    <deployables>
+                        <deployable>
+                            <groupId>fi.muikku</groupId>
+                            <artifactId>muikku</artifactId>
+                            <type>war</type>
+                            <properties>
+                                <context>${integrationtest.contextpath}</context>
+                            </properties>
+                            <pingURL>http://${integrationtest.serverhost}:${integrationtest.serverport}/${integrationtest.contextpath}/index.jsf</pingURL>
+                            <pingTimeout>600000</pingTimeout>
+                        </deployable>
+                    </deployables>
 				</configuration>
 				<dependencies>
 					<dependency>
@@ -366,6 +424,31 @@
           <artifactId>sauce_junit</artifactId>
           <scope>test</scope>
         </dependency>
+
+        <!-- Required for server test deploy -->
+
+        <dependency>
+            <groupId>fi.muikku</groupId>
+            <artifactId>muikku</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>war</type>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+         <groupId>mysql</groupId>
+         <artifactId>mysql-connector-java</artifactId>
+         <scope>test</scope>
+         <version>5.1.28</version>
+       </dependency>
+
+        <dependency>
+         <groupId>com.h2database</groupId>
+         <artifactId>h2</artifactId>
+         <version>1.3.175</version>
+         <scope>test</scope>
+       </dependency>
+
 	</dependencies>
 
 	<pluginRepositories>
@@ -408,10 +491,6 @@
 			<id>caldav4j</id>
 			<url>https://caldav4j.googlecode.com/svn/maven/</url>
 		</repository>
-        <repository>
-            <id>saucelabs</id>
-            <url>https://repository-saucelabs.forge.cloudbees.com/release</url>
-        </repository>
 		<repository>
 			<id>repository.jboss.org_thirdparty-releases</id>
 			<name>JBoss.org third party releases repository</name>
